crates/swc_ecma_parser/tests/typescript-errors/type-only-import-equals-decl/named/input.ts.stderr
error: Expected 'from', got '='
 --> $DIR/tests/typescript-errors/type-only-import-equals-decl/named/input.ts:1:24
  |
1 | import type { MyType } = require('commonjs-package')
  |                        ^

